--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </p>
           <p class="card-text">
             Под конец 1 спринта, я уже начал думать, что это не моё. 
-            Проектная работа казалась чем-то невозможным, но после того как я во всем разобрасля, 
+            Проектная работа казалась чем-то невозможным, но после того как я во всем разобрался, 
             понял, что она не такая уж и сложная.
           </p> 
           <ul class="button-list">
