--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark" />
     <title>Закрывающий тег</title>
-    <link rel="icon" href="./images/favicon.svg" />
+    <link rel="icon" href="./images/favicon.ico" />
+    <link rel="apple-touch-icon" href="./images/favicon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/themes.css" />
     <script src="./scripts/set-theme.js"></script>
   </head>
   <body class="page">
     <header class="header">
-      <h1 class="header-title">
+      <a class="header-title">
         &lt;/html&gt;
-      </h1>
-      <p class="header-subtitle">
+      </a>
+      <h1 class="header-subtitle">
         закрывающий тег
-      </p>
+      </h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -53,14 +54,14 @@
         <h2 class="card-title">
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
-        <picture class="card-picture">
+        <div class="card-picture">
           <p class="watermark">&lt;/HTML&gt;</p>
           <img 
             src="./images/card-image.png" 
             alt="Дом на колесах в 8-битном стиле" 
             class="card-image"
           />
-        </picture>
+        </div>
         <div class="content">
           <p class="card-text">
             Это было самое начало пути. 
@@ -105,14 +106,14 @@
         <h2 class="card-title">
           1 спринт: Я — чистый лист
         </h2>
-        <picture class="card-picture">
+        <div class="card-picture">
           <p class="watermark">&lt;/HTML&gt;</p>
           <img 
             src="./images/card-image.png" 
             alt="Дом на колесах в 8-битном стиле" 
             class="card-image fliter-grayscale"
           />
-        </picture>
+        </div>
         <div class="content">
           <p class="card-text">
             На первых этапах мы работали со страхами и сомнениями, 
@@ -124,8 +125,8 @@
           <p class="card-text">
             Первый спринт начался очень легко. Я познакомился с большим количеством интересных людей.
           </p> 
-          <ul class="button-list">
-            <li class="button-list__item">
+          <div class="button-list">
+            <div class="button-list__item">
               <button class="card__icon-button card-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" class="like-icon">
                   <g>
@@ -145,27 +146,27 @@
                   0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--icon-main-color)"/>
                 </svg>
               </button>
-            </li>
-            <li class="button-list__item">
+            </div>
+            <div class="button-list__item">
               <button class="card__like-button card-button">
                 <span class="button__text">Like</span>
               </button>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section class="card">
         <h2 class="card-title">
           1 спринт: А если не получится?
         </h2>
-        <picture class="card-picture">
+        <div class="card-picture">
           <p class="watermark">&lt;/CSS&gt;</p>
           <img 
             src="./images/card-image.png" 
             alt="Дом на колесах в 8-битном стиле" 
             class="card-image filter-brightness"
           />
-        </picture>
+        </div>
         <div class="content">
           <p class="card-text">
             Первый проект — позади! Но это всё ещё самое начало пути. 
@@ -177,8 +178,8 @@
             Проектная работа казалась чем-то невозможным, но после того как я во всем разобрался, 
             понял, что она не такая уж и сложная.
           </p> 
-          <ul class="button-list">
-            <li class="button-list__item">
+          <div class="button-list">
+            <div class="button-list__item">
               <button class="card__icon-button card-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" class="like-icon">
                   <g>
@@ -198,27 +199,27 @@
                   0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--icon-main-color)"/>
                 </svg>
               </button>
-            </li>
-            <li class="button-list__item">
+            </div>
+            <div class="button-list__item">
               <button class="card__like-button card-button">
                 <span class="button__text">Like</span>
               </button>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section class="card">
         <h2 class="card-title">
           2 спринт: Погоня за идеалом
         </h2>
-        <picture class="card-picture">
+        <div class="card-picture">
           <p class="watermark">&lt;/desigions&gt;</p>
           <img 
             src="./images/card-image.png" 
             alt="Дом на колесах в 8-битном стиле" 
             class="card-image filter-contrast"
           />
-        </picture>
+        </div>
         <div class="content">
           <p class="card-text">
             На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, 
@@ -229,8 +230,8 @@
           <p class="card-text">
             Ко 2 спринту я уже был полон уверености в себе, и с удовольствием проходил одну тему за другой.
           </p> 
-          <ul class="button-list">
-            <li class="button-list__item">
+          <div class="button-list">
+            <div class="button-list__item">
               <button class="card__icon-button card-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" class="like-icon">
                   <g>
@@ -250,27 +251,27 @@
                   0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--icon-main-color)"/>
                 </svg>
               </button>
-            </li>
-            <li class="button-list__item">
+            </div>
+            <div class="button-list__item">
               <button class="card__like-button card-button">
                 <span class="button__text">Like</span>
               </button>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section class="card">
         <h2 class="card-title">
           2 спринт: О тех, кто рядом
         </h2>
-        <picture class="card-picture">
+        <div class="card-picture">
           <p class="watermark">care</p>
           <img 
             src="./images/card-image.png" 
             alt="Дом на колесах в 8-битном стиле" 
             class="card-image filter-invert"
           />
-        </picture>
+        </div>
         <div class="content">
           <p class="card-text">
             Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). 
@@ -282,8 +283,8 @@
             Вторая проектная работа была в несколько раз сложнее первой, 
             но благодаря помощи наставников и одногрупников у меня все получилось. 
           </p> 
-          <ul class="button-list">
-            <li class="button-list__item">
+          <div class="button-list">
+            <div class="button-list__item">
               <button class="card__icon-button card-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" class="like-icon">
                   <g>
@@ -303,27 +304,27 @@
                   0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--icon-main-color)"/>
                 </svg>
               </button>
-            </li>
-            <li class="button-list__item">
+            </div>
+            <div class="button-list__item">
               <button class="card__like-button card-button">
                 <span class="button__text">Like</span>
               </button>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section class="card">
         <h2 class="card-title">
           3 спринт: Обходные стратегии
         </h2>
-        <picture class="card-picture">
+        <div class="card-picture">
           <p class="watermark">&lt;/support&gt;</p>
           <img 
             src="./images/card-image.png" 
             alt="Дом на колесах в 8-битном стиле" 
             class="card-image filter-sepia"
           />
-        </picture>
+        </div>
         <div class="content">
           <p class="card-text">
             На этом курсе вы постоянно решали разные задачи. 
@@ -334,8 +335,8 @@
             Начало третьего спинта я встречал на даче вместе с семьей. 
             Из-за немного долгого отдыха приступил к учебе только на 5 день. 
           </p> 
-          <ul class="button-list">
-            <li class="button-list__item">
+          <div class="button-list">
+            <div class="button-list__item">
               <button class="card__icon-button card-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" class="like-icon">
                   <g>
@@ -355,27 +356,27 @@
                   0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--icon-main-color)"/>
                 </svg>
               </button>
-            </li>
-            <li class="button-list__item">
+            </div>
+            <div class="button-list__item">
               <button class="card__like-button card-button">
                 <span class="button__text">Like</span>
               </button>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section class="card">
         <h2 class="card-title">
           3 спринт: Когда опускаются руки
         </h2>
-        <picture class="card-picture">
+        <div class="card-picture">
           <p class="watermark">&lt;/lifes-style: none;&gt;</p>
           <img 
             src="./images/card-image.png" 
             alt="Дом на колесах в 8-битном стиле" 
             class="card-image fliter-blur"
           />
-        </picture>
+        </div>
         <div class="content">
           <p class="card-text">
             Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. 
@@ -388,8 +389,8 @@
             Проектная работа никак не получалась, я снова начал думать, что занимаюсь чем-то не тем.
             Но благдаря софт-скиловому треку понял, что все совсем не так, и с новыми силами закончил проект.
           </p> 
-          <ul class="button-list">
-            <li class="button-list__item">
+          <div class="button-list">
+            <div class="button-list__item">
               <button class="card__icon-button card-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" class="like-icon">
                   <g>
@@ -409,27 +410,27 @@
                   0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--icon-main-color)"/>
                 </svg>
               </button>
-            </li>
-            <li class="button-list__item">
+            </div>
+            <div class="button-list__item">
               <button class="card__like-button card-button">
                 <span class="button__text">Like</span>
               </button>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
       </section>
       <section class="card">
         <h2 class="card-title">
           «Сейчас я здесь»
         </h2>
-        <picture class="card-picture">
+        <div class="card-picture">
           <p class="watermark">&lt;/experience&gt;</p>
           <img 
             src="./images/card-image.png" 
             alt="Дом на колесах в 8-битном стиле" 
             class="card-image filter-hue__rotate-opacity"
           />
-        </picture>
+        </div>
         <div class="content">
           <p class="card-text">
             Сейчас вы уже очень много знаете о вёрстке. Но это только начало. 
@@ -443,8 +444,8 @@
             Тут я наконец-то узнал обо всех прелестях вёрстки.
             Научился делать анимации или же просто наводить «красотицу» на странице.
           </p> 
-          <ul class="button-list">
-            <li class="button-list__item">
+          <div class="button-list">
+            <div class="button-list__item">
               <button class="card__icon-button card-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" class="like-icon">
                   <g>
@@ -464,13 +465,13 @@
                   0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--icon-main-color)"/>
                 </svg>
               </button>
-            </li>
-            <li class="button-list__item">
+            </div>
+            <div class="button-list__item">
               <button class="card__like-button card-button">
                 <span class="button__text">Like</span>
               </button>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
       </section>
     </main>
@@ -481,59 +482,31 @@
           onclick="window['footer__dialog'].showModal()" 
           aria-controls="footer__dialog"
       >
-        <svg width="29" height="28" >
-          <use href="#floppy" class="footer__button-floppy">
+        <svg width="39" height="39" viewBox="0 0 39 39">
+          <use href="#floppy" class="footer__button-floppy" />
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
     </footer>
     <dialog id="footer__dialog">
-        <div class="footer__dialog-content">
-          <svg width="39" height="39" >
-            <use href="#big-floppy" class="footer__dialog-floppy">
-          </svg>
-          <p class="footer__dialog-text">Вставьте дискету, чтобы продолжить</p>
-        </div>
-        <button 
-            class="footer__dialog-button" 
-            type="button" 
-            onclick="window['footer__dialog'].close()"
-        >
+      <div class="footer__dialog-content">
+        <svg width="39" height="39" viewBox="0 0 39 39">
+          <use href="#floppy" class="footer__dialog-floppy" />
+        </svg>
+        <p class="footer__dialog-text">Вставьте дискету, чтобы продолжить</p>
+      </div>
+      <form method="dialog">
+        <button class="footer__dialog-button">
           <span class="button__text">ок</span>
         </button>
+      </form>
     </dialog>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
 
-<svg width="29" height="28" fill="none" xmlns="http://www.w3.org/2000/svg" class="visually-hidden" aria-hidden="true">
-  <symbol id="floppy">
-    <g fill="var(--themes-main-color)">
-    <path d="M.5 0h2.154v2.154H.5zM.5 2.154h2.154v2.154H.5zM.5 4.308h2.154v2.154H.5zM.5 6.462h2.154v2.154H.5z"/>
-    <path d="M.5 8.615h2.154v2.154H.5zM.5 10.769h2.154v2.154H.5zM.5 12.923h2.154v2.154H.5zM.5 15.077h2.154v2.154H.5zM.5 17.231h2.154v2.154H.5zM.5 19.385h2.154v2.154H.5z"/>
-    <path d="M.5 21.538h2.154v2.154H.5zM.5 23.692h2.154v2.154H.5zM.5 25.846h2.154V28H.5zM24.193 0v2.154h-2.154V0z"/>
-    <path d="M22.04 0v2.154h-2.155V0zM19.884 0v2.154H17.73V0zM17.73 0v2.154h-2.154V0z"/>
-    <path d="M15.577 0v2.154h-2.154V0zM13.423 0v2.154H11.27V0zM11.27 0v2.154H9.115V0z"/>
-    <path d="M9.116 0v2.154H6.962V0zM6.96 0v2.154H4.808V0zM4.807 0v2.154H2.653V0zM26.346 2.154v2.154h-2.154V2.154zM6.96 4.308v2.154H4.808V4.308zM6.96 2.154v2.154H4.808V2.154zM6.96 6.462v2.154H4.808V6.462zM22.039 4.308v2.154h-2.154V4.308zM22.04 2.154v2.154h-2.155V2.154z"/>
-    <path d="M22.039 6.461v2.154h-2.154V6.461zM17.73 4.307v2.154h-2.154V4.307zM17.73 2.153v2.154h-2.154V2.153zM17.73 6.461v2.154h-2.154V6.461zM22.04 8.615v2.154h-2.155V8.615zM19.884 8.615v2.154H17.73V8.615zM17.73 8.615v2.154h-2.153V8.615zM15.577 8.615v2.154h-2.154V8.615zM13.423 8.615v2.154H11.27V8.615zM11.27 8.616v2.154H9.116V8.616zM9.116 8.615v2.154H6.962V8.615zM6.961 8.615v2.154H4.807V8.615zM24.192 15.077v2.154h-2.154v-2.154z"/>
-    <path d="M22.039 15.077v2.154h-2.154v-2.154zM19.884 15.077v2.154H17.73v-2.154zM17.73 15.076v2.154h-2.154v-2.154z"/>
-    <path d="M15.577 15.077v2.154h-2.154v-2.154zM13.423 15.077v2.154h-2.154v-2.154z"/>
-    <path d="M11.27 15.077v2.154H9.114v-2.154z"/>
-    <path d="M9.116 15.077v2.154H6.962v-2.154zM6.96 15.077v2.154H4.808v-2.154zM24.192 17.231v2.154h-2.154v-2.154z"/>
-    <path d="M6.96 17.23v2.155H4.808V17.23zM24.192 19.385v2.154h-2.154v-2.154zM6.96 19.385v2.154H4.808v-2.154zM24.193 21.539v2.154H22.04v-2.154z"/>
-    <path d="M6.961 21.538v2.154H4.807v-2.154zM6.961 23.692v2.154H4.807v-2.154zM24.193 23.693v2.154H22.04v-2.154z"/>
-    <path d="M26.346 25.846V28h-2.154v-2.154z"/>
-    <path d="M24.193 25.846V28h-2.154v-2.154z"/>
-    <path d="M22.04 25.846V28h-2.155v-2.154zM19.884 25.846V28H17.73v-2.154zM17.73 25.845V28h-2.154v-2.154z"/>
-    <path d="M15.577 25.846V28h-2.154v-2.154zM13.423 25.846V28H11.27v-2.154zM11.27 25.846V28H9.114v-2.154z"/>
-    <path d="M9.116 25.846V28H6.962v-2.154zM6.96 25.846V28H4.808v-2.154zM4.807 25.846V28H2.653v-2.154zM28.5 28h-2.154v-2.154H28.5zM28.5 25.846h-2.154v-2.154H28.5z"/>
-    <path d="M28.5 23.693h-2.154v-2.154H28.5zM28.5 21.539h-2.154v-2.154H28.5zM28.5 19.385h-2.154V17.23H28.5zM28.5 17.23h-2.154v-2.153H28.5zM28.5 15.077h-2.154v-2.154H28.5zM28.5 12.923h-2.154V10.77H28.5zM28.5 10.77h-2.154V8.614H28.5z"/>
-    <path d="M28.5 8.615h-2.154V6.461H28.5zM28.5 6.461h-2.154V4.307H28.5z"/>
-    </g>
-  </symbol>
-</svg>
 <svg width="39" height="39" fill="none" xmlns="http://www.w3.org/2000/svg" class="visually-hidden" aria-hidden="true">
-  <symbol id="big-floppy">
+  <symbol id="floppy">
     <g fill="var(--themes-main-color)">
       <path d="M0 0h3v3H0zM0 3h3v3H0zM0 6h3v3H0zM0 9h3v3H0zM0 12h3v3H0zM0 15h3v3H0zM0 18h3v3H0zM0 21h3v3H0zM0 24h3v3H0zM0 27h3v3H0zM0 30h3v3H0zM0 33h3v3H0zM0 36h3v3H0zM33 0v3h-3V0z"/>
       <path d="M30.003 0v3h-3V0zM27 0v3h-3V0zM24 0v3h-3V0zM20.999 0v3h-3V0z"/>
